--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,5 @@ body{
   margin: 0;
   overflow-x: hidden;
   background-image: url(./assets/images/bg.svg)!important;
+  background-attachment: fixed;
 }
