--- a/src/app/Navbar/Navbar.component.css
+++ b/src/app/Navbar/Navbar.component.css
@@ -54,6 +54,9 @@ nav{
 
 
 }
+.nml{
+  margin-left: 28rem!important;
+}
 .plan-img{
   width: 30rem;
   height: 20rem;
@@ -88,4 +91,25 @@ clip-path: polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 9
 .picsum-img-wrapper{
   width: 50%;
   max-height: 50%;
+}
+.ml8{
+  margin-left: 8rem;
+}
+.carl-image{
+  height:312px;
+}
+.carl-image-head{
+  height: 558px;
+}
+@media only screen and (max-width: 600px) {
+  .iframe-video{
+  width : -webkit-fill-available;
+  /* height: 3rem; */
+  }
+ .carl-image-head{
+   height: 320px;
+ }
+ .contactPill{
+   width: 20rem;
+ }
 }
