--- a/src/app/Navbar/Navbar.component.html
+++ b/src/app/Navbar/Navbar.component.html
@@ -19,12 +19,12 @@
       <a class="nav-item nav-link" href="#">Book a Site Visit</a>
       <a class="nav-item nav-link" href="#aboutus">About US</a>
     </div>
-    <div class="nav-item nav-link float-right">
+    <span class="nml">
       <h5 class="border border-info text-info rounded-pill contactPill  text-center py-2 px-2
                     shadow bg-white rounded">
         <i class="fas fa-phone"></i> {{contactNumber}}
       </h5>
-    </div>
+    </span>
   </div>
 </nav>
 
@@ -40,36 +40,45 @@
   </div>
   <div class="row mt-2">
     <div class="col-sm-12 col-md-7">
-      <div class="m-3 custom-border">
-        <ngb-carousel *ngIf="images">
-          <ng-template ngbSlide>
-            <div class="picsum-img-wrapper">
-              <img [src]="images[0]" alt="Random first slide">
+      <div class="custom-border">
+        <div id="carouselSectionCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselSectionCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselSectionCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselSectionCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img [src]="images[0]" class="d-block w-100 carl-image-head" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
             </div>
-            <div class="carousel-caption">
-              <h3>First slide label</h3>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <div class="carousel-item">
+              <img [src]="images[1]" class="d-block w-100 carl-image-head" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
             </div>
-          </ng-template>
-          <ng-template ngbSlide>
-            <div class="picsum-img-wrapper">
-              <img [src]="images[1]" alt="Random second slide">
+            <div class="carousel-item">
+              <img [src]="images[2]" class="d-block w-100 carl-image-head" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              </div>
             </div>
-            <div class="carousel-caption">
-              <h3>Second slide label</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </ng-template>
-          <ng-template ngbSlide>
-            <div class="picsum-img-wrapper">
-              <img [src]="images[2]" alt="Random third slide">
-            </div>
-            <div class="carousel-caption">
-              <h3>Third slide label</h3>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-          </ng-template>
-        </ngb-carousel>
+          </div>
+          <a class="carousel-control-prev" href="#carouselSectionCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselSectionCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
       <div class="text-center">
         <div class="row">
@@ -130,9 +139,9 @@
           COVE OF CONVENIENCE
         </h4>
         <div class=" text-info text-center">
-          <span class="line-bold">______</span>
+          <span class="line-bold" *ngIf="!isMobile">______</span>
           <button class="btn btn-info btn-md mx-2" (click)="open(content)">Enquire Now</button>
-          <span class="line-bold">_____</span>
+          <span class="line-bold" *ngIf="!isMobile">_____</span>
         </div>
       </div>
       <div class="form container">
@@ -162,7 +171,7 @@
 <section>
   <div class="row">
     <div class="col-sm-12 col-md-8">
-      <div class="container mx-5">
+      <div [ngClass]="isMobile ? 'container' :'container'">
         <h3 class="text-center text-info my-4">GODREJ RIVERHILLS OVERVIEW</h3>
         <hr>
         <p class="container text-justify">
@@ -177,7 +186,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="mx-5 my-5">
+      <div [ngClass]="isMobile ? 'mx-1 my-5' :'my-5 mx-5'">
         <ul class="list-group list-group-flush">
           <li class="list-group-item"> <span class="mr-4 text-info">➤</span> 8+ Acres Central Green Zone</li>
           <li class="list-group-item"> <span class="mr-4 text-info">➤</span>Central Park, Spread Over 7.5 Acres</li>
@@ -198,8 +207,8 @@
 </section>
 <hr>
 <!-- Section 3 -->
-<section id="amenities">
-  <div class="container">
+<section id="amenities" *ngIf="!isMobile">
+  <div class="mx-5">
     <!-- <div class="row">
       <div class="container amenities-head text-center bg-info text-white">
         <span>AMENITIES</span>
@@ -207,45 +216,78 @@
     </div> -->
     <div class="row">
       <div class="col-md-6">
-        <div class="row my-4">
-          <div class="col md-3">
-            <h4 class="text-white bg-info amenities-title">INDOOR</h4>
+        <h4 class="text-white bg-info text-center amenities-title">INDOOR</h4>
+      </div>
+      <div class="col-md-6">
+        <h4 class="text-white bg-info text-center amenities-title">OUTDOOR</h4>
+      </div>
+    </div>
+    <!-- row 1 -->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col md-4">
+            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor1.webp">
           </div>
-          <div class="col md-3">
-            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor1.jpg">
+          <div class="col md-4">
+            <!-- <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor2.webp"> -->
           </div>
-          <div class="col md-3">
-            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor2.jpg">
-          </div>
-          <div class="col md-3">
-            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor1.jpg">
+          <div class="col md-4">
+            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor1.webp">
           </div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="row mt-5">
-          <div class="col md-3">
-            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor1.jpg">
+        <div class="row">
+          <div class="col md-4">
+            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor1.webp">
           </div>
-          <div class="col md-3">
-            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor2.jpg">
+          <div class="col md-4">
+            <!-- <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor2.webp"> -->
           </div>
-          <div class="col md-3">
-            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor1.jpg">
-          </div>
-          <div class="col md-3">
-            <h4 class="text-white bg-info amenities-title">OUTDOOR</h4>
+          <div class="col md-4">
+            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor1.webp">
           </div>
         </div>
       </div>
     </div>
+    <!-- row 2 -->
+    <div class="row mt-3">
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col md-4">
+            <!-- <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor1.webp"> -->
+          </div>
+          <div class="col md-4">
+            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor2.webp">
+          </div>
+          <div class="col md-4">
+            <!-- <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/indoor1.webp"> -->
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col md-4">
+            <!-- <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor1.webp"> -->
+          </div>
+          <div class="col md-4">
+            <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor2.webp">
+          </div>
+          <div class="col md-4">
+            <!-- <img class="rounded mx-auto d-block godrejImg" alt="Godrej Logo" src="./assets/images/outdoor1.webp"> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- row 3 -->
   </div>
 </section>
 <hr>
 <!-- Section Area and pricing -->
 <section id="price">
   <div class="mx-5">
-    <div class="row">
+    <div class="row" *ngIf="!isMobile">
       <div class="col-sm-12 col-md-6">
         <h3 class="text-info text-center my-4">AREA & PRICING</h3>
         <table class="table table-bordered table-striped border-info table-responsive custom-border">
@@ -291,7 +333,46 @@
         <h3 class="text-info text-center">
           PRICE BREAKUP
         </h3>
-        <img class="pricebreak-img custom-border mt-3" src="./assets/images/pricesheet.jpg" alt="price sheet">
+        <img class="pricebreak-img custom-border mt-3" src="./assets/images/pricesheet.webp" alt="price sheet">
+      </div>
+    </div>
+    <!-- mobile div -->
+    <div class="" *ngIf="isMobile">
+      <h3 class="text-info text-center my-4 ml-5">AREA & PRICING</h3>
+      <div class="">
+        <div class="container-fluid text-center">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Residences : 1 BHK</h5>
+              <p class="card-text">Carpet Area : 300 sq. ft.</p>
+              <p>Garden Facing : ₹ 42.50 Lacs</p>
+              <p> Hill Facing : ₹ 61.90 Lacs</p>
+              <button class="btn btn-info">Get Price Sheet</button>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid text-center my-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Residences : 1 BHK</h5>
+              <p class="card-text">Carpet Area : 300 sq. ft.</p>
+              <p>Garden Facing : ₹ 42.50 Lacs</p>
+              <p> Hill Facing : ₹ 61.90 Lacs</p>
+              <button class="btn btn-info">Get Price Sheet</button>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid text-center">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Residences : 1 BHK</h5>
+              <p class="card-text">Carpet Area : 300 sq. ft.</p>
+              <p>Garden Facing : ₹ 42.50 Lacs</p>
+              <p> Hill Facing : ₹ 61.90 Lacs</p>
+              <button class="btn btn-info">Get Price Sheet</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -303,41 +384,71 @@
     <h3 class="text-info text-center">GALLERY</h3>
     <div class="row">
       <div class="col-sm-12 col-md-4">
-        <img class="gallery-img" src="./assets/images/gallery1.jpg" alt="gallery-image-1">
+        <img class="gallery-img" src="./assets/images/gallery1.webp" alt="gallery-image-1">
       </div>
       <div class="col-sm-12 col-md-4">
-        <img class="gallery-img" src="./assets/images/gallery2.jpg" alt="gallery-image-2">
+        <img class="gallery-img" src="./assets/images/gallery2.webp" alt="gallery-image-2">
       </div>
       <div class="col-sm-12 col-md-4">
-        <img class="gallery-img" src="./assets/images/gallery3.jpg" alt="gallery-image-3">
+        <img class="gallery-img" src="./assets/images/gallery3.webp" alt="gallery-image-3">
       </div>
     </div>
   </div>
 </section>
 <!--  Floor Plans -->
 <section id="mafplans">
-  <div class="mx-5">
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
-        <h3 class="text-info text-center my-4">MASTER PLAN</h3>
-        <img class="img-thumbnail plan-img custom-border" src="./assets/images/master-plan.jpg" alt="master-plan">
-      </div>
-      <div class="col-sm-12 col-md-6">
-        <h3 class="text-info text-center my-4">UNIT PLANS</h3>
-        <div class="row">
-          <div class="col-md-1 aling-center">
-            <i class="fas fa-arrow-left text-info fa-2x mr-2 " (click)="changeUnitPlanImg()"></i>
-          </div>
-          <div class="col-md-8">
-            <img class="img-thumbnail plan-img custom-border text-center" [src]="unitPlanImhURL" alt="unit-plan-1">
-          </div>
-          <div class="col-md-1 aling-center">
-            <i class="fas fa-arrow-right text-info fa-2x ml-2" (click)="changeUnitPlanImg()"></i>
+  <div class="row mx-1">
+    <!-- <div class="row"> -->
+    <div class="col-sm-12 col-md-6">
+      <h3 [ngClass]="isMobile ? 'text-info text-center my-4' :'text-info text-center my-4 ml-3'">MASTER PLAN</h3>
+      <img [ngClass]="isMobile ? 'img-thumbnail plan-img custom-border':'img-thumbnail plan-img custom-border ml8'"
+        src="./assets/images/master-plan.webp" alt="master-plan">
+    </div>
+    <div class="col-sm-12 col-md-6">
+      <h3 class="text-info text-center my-4">UNIT PLANS</h3>
+        <div class="custom-border">
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img [src]="unitPlanImages[0]" class="d-block w-100 carl-image" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img [src]="unitPlanImages[1]" class="d-block w-100 carl-image" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img [src]="unitPlanImages[2]" class="d-block w-100 carl-image" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
-      </div>
     </div>
   </div>
+  <!-- </div> -->
 </section>
 <hr>
 <!-- Locate Us -->
@@ -355,7 +466,8 @@
     <h3 class="text-info text-center my-2">
       VIRTUAL SITE TOUR
     </h3>
-    <iframe class="iframe-video mx-5 px-5" [src]='safeURL' frameborder="0" allowfullscreen></iframe>
+    <iframe [ngClass]="isMobile ? 'iframe-video mx-2' :'iframe-video mx-5 px-5'" [src]='safeURL' frameborder="0"
+      allowfullscreen></iframe>
   </div>
 </section>
 
